[package]
name = "tio2"
version = "0.1.0"
edition = "2021"
authors = ["Connor Sample <tabulatejarl8@gmail.com>"]
description = "TI-BASIC decompiler and interpreter written in Rust"
homepage = "https://tabulate.tech"
repository = "https://github.com/TabulateJarl8/TiO2"
readme = "README.md"
license = "GPL-3.0-or-later"


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.89"
clap = { version = "4.5.18", features = ["cargo"] }
env_logger = "0.11.5"
log = "0.4.22"

[features]
default = ["interpreter"]
interpreter = []

[profile.release]
strip = "symbols"
